# TweetCloud

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  app.py  environment.yml  intro.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  python-app.yml
tests/: test.py  test_helpers.py  tests.py
tests/helpers/: generate_test_word_dictionaries.py  test_text.py  test_word_cloud.py  test_wordcloud.py
tests/helpers/data/: tweets.json  words.csv
tests/helpers/data/word_sets/: hp_otp.txt  huge_word_set.json  large_word_set.json
tests/word_sets/: huge_word_set.txt  large_word_set.txt  medium_word_set.txt  small_word_set.txt
tweetcloud/: __init__.py  _version.py  app.py  helpers.py  util.py
tweetcloud/helpers/: text.py  twitter_api.py
tweetcloud/visualization/: wordcloud.py
