[metadata]
name = tweetcloud
author = Jacob Goldfinger / Greg Block
description = Generate word clouds from tweet history
long_description = file: README.md, LICENSE.md
license = MIT
url = https://github.com/gblock0/TweetCloud

[options]
include_package_data = True
packages = find:
install_requires =
    matplotlib==3.3.*
    pandas==1.1.*
    pillow==7.2.*
    python-twitter==3.*
    wordcloud==1.7.*
python_requires = ==3.8.*

[options.entry_points]
console_scripts =
    tweetcloud = tweetcloud.app:main
